--- a/index.html
+++ b/index.html
@@ -84,6 +84,55 @@
           </li>
         </ol>
       </section>
+
+      <h2>Infoviz</h2>
+<div id="wordcloud"></div>
+
+<!-- Bibliotek for ordsky -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/d3-cloud/build/d3.layout.cloud.js"></script>
+
+<script>
+  const words = [
+    {text: "HTML", size: 40},
+    {text: "CSS", size: 30},
+    {text: "JavaScript", size: 25},
+    {text: "Data", size: 20},
+    {text: "Visualization", size: 35},
+    {text: "Storytelling", size: 28}
+  ];
+
+  const layout = d3.layout.cloud()
+    .size([500, 300])
+    .words(words)
+    .padding(5)
+    .rotate(() => ~~(Math.random() * 2) * 90)
+    .font("Impact")
+    .fontSize(d => d.size)
+    .on("end", draw);
+
+  layout.start();
+
+  function draw(words) {
+    d3.select("#wordcloud")
+      .append("svg")
+      .attr("width", 500)
+      .attr("height", 300)
+      .append("g")
+      .attr("transform", "translate(250,150)")
+      .selectAll("text")
+      .data(words)
+      .enter().append("text")
+      .style("font-size", d => d.size + "px")
+      .style("font-family", "Impact")
+      .style("fill", "steelblue")
+      .attr("text-anchor", "middle")
+      .attr("transform", d => "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")")
+      .text(d => d.text);
+  }
+</script>
+
+<p>Her bruker jeg d3.js til å lage en enkel ordsky som visualiserer nøkkelord. Alternativt kunne jeg laget et nettverk av noder, en Sankey-graf eller en interaktiv treemap.</p>
   </main>
 </body>
 </html>
