--- a/index.html
+++ b/index.html
@@ -133,6 +133,29 @@
 </script>
 
 <p>Her bruker jeg d3.js til å lage en enkel ordsky som visualiserer nøkkelord. Alternativt kunne jeg laget et nettverk av noder, en Sankey-graf eller en interaktiv treemap.</p>
+
+<!-- Dette er chatGPT som har lagt inn! https://chatgpt.com/share/68dc1591-bfc8-800c-b450-628e46099a86-->
+
+<h2>Chart</h2>
+<svg width="400" height="200" style="border:1px solid #ccc">
+  <!-- Akser -->
+  <line x1="30" y1="10" x2="30" y2="180" stroke="black" />
+  <line x1="30" y1="180" x2="380" y2="180" stroke="black" />
+
+  <!-- Stolper -->
+  <rect x="50" y="100" width="40" height="80" fill="steelblue" />
+  <rect x="120" y="60" width="40" height="120" fill="tomato" />
+  <rect x="190" y="140" width="40" height="40" fill="gold" />
+  <rect x="260" y="80" width="40" height="100" fill="green" />
+</svg>
+
+<p>
+Denne grafen laget jeg med <code>&lt;svg&gt;</code> og <code>&lt;rect&gt;</code>-elementer i HTML.  
+En alternativ måte ville vært å bruke et bibliotek som Chart.js eller å sette inn et ferdig bilde.
+</p>
+
+<!--Dette er chatGPT som har laget: https://chatgpt.com/share/68dd6371-aab8-800c-9540-fe5f90f86d59-->
+
   </main>
 </body>
 </html>
