Fjernet lokal vid, satt tilbake demo klipp

--- a/index.html
+++ b/index.html
@@ -53,16 +53,10 @@
       <article>
         <h2>Video</h2>
         <video controls width="600" poster="Assets/ggg.JPG">
-          <source src="Assets/pull1.mp4" type="video/mp4">
+          <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
         </video>
-        <p>Her bruker jeg det innebygde video elementet med en MP4-kilde og standardkontroller, som er den enkleste måten å vise video på i ren HTML.</p>
-        <p>Alternativt kunne jeg brukt et JavaScript-bibliotek for mer avanserte funksjoner som f.eks kontroller, undertekster osv.</p>
-        <p>Kan også hente inn video fra en ekstern kilde, ved å bruke iframe-element.</p>
-
-
-        <p>Dette er en av videoene vi har fått tilsendt ifbm intervjuene. Den gir et lite glimt inn i deres perspektiv. <span style="color: red; font-size: 1.1em;">Som avtalt i kontrakten er den kun for lærere og eksaminator.</span></p>
-
-        <p>Det er brukt Ai for å fjerne metadata fra videoen.</p>
+        <p>Her bruker jeg det innebygde videoelementet med en åpen demo-video fra MDN, som er den enkleste måten å vise video på i ren HTML.</p>
+        <p>Alternativt kunne jeg brukt et JavaScript-bibliotek for mer avanserte funksjoner som f.eks kontroller, undertekster osv., eller hentet en video via et iframe-element.</p>
       </article>
 
       <article>
